--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-uglify-es": "^2.0.0"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "gulp-imagemin": "^7.1.0",
     "jquery": "^3.6.0"
   },
